# web_service

./: .dockerignore  .env.example  .gitignore  AGENTS.md  MORNING.md  README.md  compose.cloudflare.yaml  compose.dev.yaml  compose.prod.yaml  compose.yaml  package.json
backend/: .dockerignore  Dockerfile  openapi.json  pyproject.toml
backend/app/: __init__.py  main.py  openapi.py
backend/app/api/: __init__.py  router.py
backend/app/core/: __init__.py  config.py  errors.py
backend/app/features/health/: router.py  schemas.py
backend/app/features/samples/: __init__.py  router.py  schemas.py  service.py
backend/tests/: test_health.py  test_openapi.py  test_samples.py
docs/: deployment-report.md  preflight.md  production-improvement-report.md  skipped-actions.md  ux-contract.md
frontend/: .dockerignore  Dockerfile  next.config.ts  package.json  playwright.config.ts  pnpm-lock.yaml  pnpm-workspace.yaml  tailwind.config.ts  tsconfig.json  vitest.config.ts
frontend/e2e/: flow.spec.ts
frontend/src/app/: error.tsx  globals.css  layout.tsx  loading.tsx  not-found.tsx  page.tsx
frontend/src/app/items/: page.tsx
frontend/src/components/layout/: app-shell.tsx  theme-control.tsx  theme-provider.tsx
frontend/src/components/patterns/: page-header.tsx
frontend/src/components/ui/: badge.tsx  button.tsx  card.tsx  confirm-dialog.test.tsx  confirm-dialog.tsx  state-panels.tsx
frontend/src/hooks/: use-modal-focus.ts
frontend/src/lib/: utils.test.ts  utils.ts
frontend/src/lib/api/: adapter.test.ts  (+3 more)
frontend/src/mocks/: samples.ts
infra/caddy/: Caddyfile
(+7 files in other folders)
