[project]
name = "overnight-web-agent-kit-api"
version = "0.1.0"
description = "Typed FastAPI vertical slice for the overnight web frame"
requires-python = ">=3.13"
dependencies = [
  "fastapi>=0.115,<1",
  "pydantic>=2.9,<3",
  "uvicorn[standard]>=0.30,<1",
]

[dependency-groups]
dev = [
  "httpx>=0.27,<1",
  "pytest>=8.3,<9",
  "ruff>=0.8,<1",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
pythonpath = ["."]

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
# Long Korean/English fixture payloads are deliberate responsive-layout test data.
ignore = ["E501"]

[tool.ruff.lint.isort]
known-first-party = ["app"]
